--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "web3-multicall3",
   "version": "0.1.0",
   "scripts": {
-    "build": "tsc",
+    "build:esm": "tsc --build tsconfig.cjs.json && echo '{\"type\": \"commonjs\"}' > ./dist/cjs/package.json",
+    "build:cjs": "tsc --build tsconfig.esm.json && echo '{\"type\": \"module\"}' > ./dist/esm/package.json",
+    "build:types": "tsc --build tsconfig.types.json",
+    "build:web": "webpack",
     "test": "jest"
   },
   "description": "Type-safe typescript wrapper for multicall3",
@@ -22,16 +25,21 @@
     "type": "git",
     "url": "https://github.com/djomaa/web3-multicall3.git"
   },
-  "main": "dist/index",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "files": [
     "dist/**/*"
   ],
   "exports": {
     ".": {
-      "default": "./dist/index.js"
+      "types": "./dist/types/index.d.js",
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js"
     },
     "./plugin": {
-      "default": "./dist/plugin/index.js"
+      "types": "./dist/types/plugin/index.d.js",
+      "import": "./dist/esm/plugin/index.js",
+      "require": "./dist/cjs/plugin/index.js"
     }
   },
   "peerDependencies": {
@@ -41,9 +49,11 @@
     "@types/jest": "^29.5.5",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
+    "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
-    "web3": "^4.1.2"
-  },
-  "dependencies": {}
+    "web3": "^4.1.2",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
+  }
 }
