--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web3-multicall3",
-  "version": "0.1.0",
+  "version": "0.2.0-beta.0",
   "scripts": {
     "build:esm": "tsc --build tsconfig.cjs.json && echo '{\"type\": \"commonjs\"}' > ./dist/cjs/package.json",
     "build:cjs": "tsc --build tsconfig.esm.json && echo '{\"type\": \"module\"}' > ./dist/esm/package.json",
