--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "web3-multicall3",
   "version": "0.2.0-beta.0",
   "scripts": {
+    "build": "concurrently --kill-others-on-fail \"yarn:build:*\"",
     "build:esm": "tsc --build tsconfig.cjs.json && echo '{\"type\": \"commonjs\"}' > ./dist/cjs/package.json",
     "build:cjs": "tsc --build tsconfig.esm.json && echo '{\"type\": \"module\"}' > ./dist/esm/package.json",
     "build:types": "tsc --build tsconfig.types.json",
@@ -51,6 +52,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.5",
+    "concurrently": "^8.2.1",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
