--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.2.0-beta.1",
   "scripts": {
     "build": "concurrently --kill-others-on-fail \"yarn:build:*\"",
-    "build:esm": "tsc --build tsconfig.cjs.json && echo '{\"type\": \"commonjs\"}' > ./dist/cjs/package.json",
-    "build:cjs": "tsc --build tsconfig.esm.json && echo '{\"type\": \"module\"}' > ./dist/esm/package.json",
+    "prebuild": "rimraf dist",
+    "build:cjs": "tsc --build tsconfig.cjs.json && echo '{\"type\": \"commonjs\"}' > ./dist/cjs/package.json",
+    "build:esm": "tsc --build tsconfig.esm.json && echo '{\"type\": \"module\"}' > ./dist/esm/package.json",
     "build:types": "tsc --build tsconfig.types.json",
     "build:web": "webpack",
-    "test": "jest"
+    "test": "jest",
+    "prepack": "yarn build"
   },
   "description": "Type-safe typescript wrapper for multicall3",
   "keywords": [
@@ -54,6 +56,7 @@
     "@types/jest": "^29.5.5",
     "concurrently": "^8.2.1",
     "jest": "^29.7.0",
+    "rimraf": "^5.0.5",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
